--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-<h1>hello world</h2>
-<p>Call me Ishmael</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title></title>
+  </head>
+  <body>
+    <h1>hello world</h2>
+    <p>Call me Ishmael</p>
+
+  </body>
+</html>
