--- a/about.html
+++ b/about.html
@@ -10,6 +10,6 @@
     <a href="https://www.flickr.com/photos/28883788@N04/10097824543">
     <img src="images/breaching_whale.jpg" alt="breaching whale" />
     </a>
-    <img src="images/polar_bear.jpg" alt="Polar Bear">
+    <a href="https://www.flickr.com/photos/puliarfanita/22959238329"><img src="images/polar_bear.jpg" alt="Polar Bear"></a>
   </body>
 </html>
