--- a/about.html
+++ b/about.html
@@ -2,15 +2,12 @@
 <html>
   <head>
     <title>About Us</title>
+    <meta charset="utf-8">
   </head>
   <body>
     <h1>About Us</h1>
-   <!-- Add something here to fix trademark -->
-    <p>This site is a sample project for the <strong>awesome</strong> Git tutorial <a href="http://learnenough.com/git-tutorial"><em>Learn Enough Git to Be Dangerous</em></a>.
+    <p>This site is a sample project for the <strong>awesome</strong> Git tutorial <a href="http://learnenough.com/git-tutorial"><em>Learn Enough™ Git to Be Dangerous</em></a>.
     </p>
-    <a href="https://www.flickr.com/photos/28883788@N04/10097824543">
-    <img src="images/breaching_whale.jpg" alt="breaching whale" />
-    </a>
     <a href="https://www.flickr.com/photos/puliarfanita/22959238329"><img src="images/polar_bear.jpg" alt="Polar Bear"></a>
   </body>
 </html>
